--- a/ReservaCanchas/appsettings.json
+++ b/ReservaCanchas/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ReservaCanchasContext": "Server=localhost;Database=ReservaCanchasContext-35b6be68-ef52-4365-9b19-e2611ffd440e;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
+  }
 }
