Finalizado el login con sus validaciones, agregado el inicio de sesion con validacion al nav bar y finalizado el home

--- a/ReservaCanchas/appsettings.json
+++ b/ReservaCanchas/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReservaCanchasContext": "Server=localhost;Database=ReservaCanchasContext-35b6be68-ef52-4365-9b19-e2611ffd440e;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
-
+    "ReservaCanchasContext": "Server=localhost,1433;Database=ReservaCanchasContext-35b6be68-ef52-4365-9b19-e2611ffd440e;User Id=sa;Password=Sqljoao#123;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   }
 }
